<resources>
    <string name="app_name">Restoran</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Create user</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>


    <color name="grey_100">#F5F5F5</color>
    <color name="grey_300">#E0E0E0</color>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Action Bar</string>
    <string name="btn_send_message">Send Message</string>

    <!-- Activity titles -->
    <string name="activity_location_found">Location Found</string>

    <!-- Action Bar action items -->
    <string name="action_search">Sarch</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>

    <!-- Search  -->
    <string name="search_hint">Search color..</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="number">Phone number</string>
    <string name="email">E-mail</string>
    <string name="all">sve</string>
    <string name="make_order">make order</string>
    <string name="split_order">split order</string>
    <string name="number_of_table">broj stola</string>
    <string name="is_it_paid">is it paid</string>
    <string name="kategory_string">kategorija</string>
    <string name="paid_string">placena</string>
    <string name="new_item_string">nova stavka</string>
    <string name="fragmentUserInfo">Fragment User Info</string>
    <string name="nameOfApp">Restoran</string>
    <string name="Logo_description">Restoran</string>




    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_user_info">user info</string>
    <string name="action_logout">logout</string>
    <string name="button_record">snimi</string>
    <string name="edit">izmeni</string>
    <string name="remove">izbrisi</string>
    <string name="in_new_order">u novu </string>
    <string name="ok_button">ok</string>
    <string name="cancel_button">cancel</string>
    <string name="logout_message"> Da li ste sigurni da zelite da se izlogujete ? </string>
    <string name="userinfo">licne informacije</string>
    <string name="add_new_user">kreiraj novog korisnika</string>
    <string name="users_list">lista korisnika</string>
    <string name="list_rezervation">lista naridzbina</string>
    <string name="add_menu_item">dodaj stavku</string>
    <string name="menu_time_list">lista stavki</string>
    <string name="logout_string">odjavi se</string>
    <string name="password">Sifra</string>
    <string name="activity_list_users">lista korisnika</string>
    <string name="title_edtiUsername">izmena podataka</string>
    <string name="type">Tip korisnika</string>
    <string name="newitemname">ime nove stavke</string>
    <string name="price_string">cena</string>
    <string name="snimljeno">snimljeno</string>
    <string name="obavezniparametri">MOlim Vas unesite obavezne parametre</string>
    <string name="loseunetparametar">lose uneti parametri</string>
    <string name="nemanistazasplit">Nista niste selektovali za split akciju</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="action_login">log in</string>
    <string name="action_crete_accout">create accout</string>

</resources>
