<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="1">

    <ImageView android:id="@+id/imgIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_avatar"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        />
    <EditText android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        />

    <EditText android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surname"
       />

    <EditText android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        />
    <EditText android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
    />

    <EditText android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />

   <Button  android:id="@+id/ok_button"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/button_record"/>






</LinearLayout>