<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/rezervation_color_background"
    android:padding="@dimen/padding_margin"
    >

    <ImageView android:id="@+id/imgIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_avatar"
        android:layout_marginRight="5dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_weight="1"
        />
    <EditText android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_weight="1"
        />

    <EditText android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:layout_weight="1"
       />

    <EditText android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
       />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:layout_weight="1"
        />
    <EditText android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_weight="1"
    />

    <EditText android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_weight="1"
        />

    <EditText android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

   <Button  android:id="@+id/ok_button"
       android:layout_weight="1"
       android:layout_marginLeft="@dimen/activity_small_padding"
       android:layout_marginRight="@dimen/activity_small_padding"
       android:layout_marginTop="@dimen/standard_margin"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/button_record"
       android:background="@drawable/shape_of_button"
       android:textColor="@color/white"/>






</LinearLayout>