<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id = "@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5/12/2015 8:53"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/split_order"
        android:layout_alignEnd="@+id/split_order"
        android:layout_marginTop="90dp" />

    <Spinner
        android:id="@+id/numbreOfTable_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_table"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/new_item"
        android:layout_toStartOf="@+id/new_item" />

    <Button  android:id="@+id/split_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/split_order"
        android:layout_below="@+id/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />





    <Button  android:id="@+id/make_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_order"
        android:layout_alignTop="@+id/split_order"
        android:layout_alignRight="@+id/new_item"
        android:layout_alignEnd="@+id/new_item" />

    <Button  android:id="@+id/new_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_plus"
       android:text="@string/new_item_string"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/checkedTextView"
        android:layout_alignStart="@+id/checkedTextView" />

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid_string"
        android:checked="false"
        android:id="@+id/checkedTextView"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:shadowColor="#1132ec"
        android:layout_above="@+id/make_order"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="97dp"
        android:layout_marginEnd="97dp" />


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/split_order"
        android:layout_alignLeft="@+id/time"
        android:layout_alignStart="@+id/time">

    </ListView>

</RelativeLayout>