<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rezervation_color_background"
    android:padding="@dimen/padding_margin"
    >

    <TextView android:id = "@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5/12/2015 8:53"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_alignTop="@+id/name_of_user"
        android:layout_alignRight="@+id/split_order"
        android:layout_alignEnd="@+id/split_order" />
    <TextView android:id = "@+id/name_of_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5/12/2015 8:53"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/new_item"
        android:layout_alignStart="@+id/new_item" />

    <Button  android:id="@+id/new_item"
        android:layout_marginTop="27dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_plus"
        android:text="@string/new_item_string"
        android:background="@drawable/shape_of_button"
        android:textColor="@color/white"
        android:layout_below="@+id/name_of_user"
        android:layout_alignRight="@+id/listaAddOrder"
        android:layout_alignEnd="@+id/listaAddOrder" />

    <Spinner
        android:id="@+id/numbreOfTable_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_table"
        android:background="@color/bluebbutton"
        android:textColor="@color/white"
        android:layout_below="@+id/paidOrNot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/time"
        android:layout_alignEnd="@+id/time" />




    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid_string"
        android:checked="false"
        android:id="@+id/paidOrNot"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:shadowColor="#1132ec"
        android:layout_below="@+id/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/numbreOfTable_spinner"
        android:layout_alignEnd="@+id/numbreOfTable_spinner" />


    <ListView
        android:id="@+id/listaAddOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@color/transparent"
        android:divider="@color/transparent"
        android:dividerHeight="5dp"
        android:listSelector="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/split_order">

    </ListView>

    <Button  android:id="@+id/split_order"
        android:layout_marginRight="@dimen/activity_small_padding"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/split_order"
        android:background="@drawable/shape_of_button"
        android:textColor="@color/white"
        android:layout_below="@+id/numbreOfTable_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button  android:id="@+id/make_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_order"
        android:background="@drawable/shape_of_button"
        android:textColor="@color/white"
        android:layout_alignBottom="@+id/split_order"
        android:layout_alignTop="@+id/split_order"
        android:layout_alignLeft="@+id/new_item"
        android:layout_alignStart="@+id/new_item"
        android:layout_alignRight="@+id/listaAddOrder"
        android:layout_alignEnd="@+id/listaAddOrder" />

</RelativeLayout>